006 add common EN

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -86,6 +86,12 @@
     "dataProcessing7": "to appropriate state authorities upon their request based on applicable law.",
     "dataProcessing8": "to other persons and entities – in cases other than those described in point a) only with the prior consent of the person concerned."
   },
+  "thirdSection": {
+    "header": "Who are we?",
+    "alt": "Klaudia and Klaudiusz",
+    "intro": "Hi! We're Klaudia and Klaudiusz. We are pizza enthusiasts, and we’re just beginning our journey of baking pizzas at events!",
+    "passion": "Klaudiusz has been baking pizza at home and in bread ovens for years, and now, together, we want to share our passion with you. We love Italy, but we love pizza even more! 🍕"
+  },
   "fourSection": {
     "header": "Our Pizzas",
     "pizza1": {
