--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -20,7 +20,7 @@
     "opinion3": "Obsługa była bardzo miła, a jedzenie fantastyczne! Wrócimy na pewno!"
   },
   "email": {
-    "header": "Pogadajmy",
+    "header": "Pogadajmy!",
     "info": "Masz pytania? Chcesz zamówić pizzę na urodziny / pańienskie / kawalerskie lub po prostu na imprezę? Wypełnij formularz, a my się z Tobą skontaktujemy!",
     "step0": "To proste jak nasza pizza!",
     "step0A": "Co musisz zrobić?",
