--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -14,7 +14,7 @@
     "navC": "Contact"
   },
   "testimonials": {
-    "header": "You’re Talking About Us!",
+    "header": "You’re waiting to your opinion!",
     "opinion1": "The pizza was delicious! They served us 50 slices at the party, and it turned out great, highly recommend!",
     "opinion2": "Everything was perfect! The service was top-notch, and the pizza was the highlight of the evening. Highly recommend!",
     "opinion3": "The staff was very friendly, and the food was fantastic! We will definitely be back!"
