--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -14,7 +14,7 @@
     "navC": "Kontakt"
   },
   "testimonials": {
-    "header": "Mówicie o nas!",
+    "header": "Czekamy na wasze opinie!",
     "opinion1": "Pizza była przepyszna! Na imprezie serwowali nam 50 kawałków i wyszło znakomicie, polecamy!",
     "opinion2": "Wszystko idealnie! Obsługa na najwyższym poziomie, a pizza była prawdziwą atrakcją wieczoru. Polecam z całego serca!",
     "opinion3": "Obsługa była bardzo miła, a jedzenie fantastyczne! Wrócimy na pewno!"
