--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -21,7 +21,7 @@
   },
   "email": {
     "header": "Pogadajmy!",
-    "info": "Masz pytania? Chcesz zamówić pizzę na urodziny / pańienskie / kawalerskie lub po prostu na imprezę? Wypełnij formularz, a my się z Tobą skontaktujemy!",
+    "info": "Masz pytania? Chcesz zamówić pizzę na urodziny / panieńskie / kawalerskie lub po prostu na imprezę? Wypełnij formularz, a my się z Tobą skontaktujemy!",
     "step0": "To proste jak nasza pizza!",
     "step0A": "Co musisz zrobić?",
     "step1": "Podaj swoje imię i e-mail, żebyśmy mogli się z Tobą skontaktować.",
